# tools

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  ISSUES.md  LICENSE  README-dev.md  README.md  SESSION_NOTES.md  TODO.md  TOOLS.md  USER_GUIDE.md  images_to_pdf.py  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
.github/workflows/: build-go.yml  build-python.yml
config/: settings.py
docs/: file-copy-migration-plan.md  file-server-migration-report-template.md  index.html  install.ps1  kdm.html  listapps  profile  removeWPS.md  update  win  wps-removal.html
go/: .gitignore  README.md  go.mod  main.go
go/copier/: README.md  copier.go  formatters.go  formatters_test.go  go.mod  main_menu_ui.go  progress_ui.go  reporter.go  scanner.go  state.go  ui.go
go/copier/cmd/copier/: main.go
go/userfiles/: userfiles.go
ps/: README.md
ps/Users/: Find-LargeUserFiles.ps1  LargeUserFiles.txt  LargeUserFiles_20251126_165230.txt  Manage-LargeUserFiles.ps1  Move-LargeFilesToD.ps1  MoveLog_20251126_165230.txt  UserFilesUtils.psm1
tests/: test_images_to_pdf.py  test_mergepdfs.py  test_pdf_to_images.py
tools/: README.md  alignpdf.py  alignpdf_using_tesseract.py  compresspdf.py  firebase_uploader.py  images_to_pdf.py  main.py  mergepdfs.py  pdf_to_images.py  utils.py
