[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
description = "A multipurpose PDF and image utility tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Hussain Shareef", email = "hussain.shareef@gmail.com" }
]

dependencies = [
  "pdf2image",
  "pillow",
  "questionary",
  "pypdf"
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
  "pytest",
  "black",
  "ruff"
]

[project.scripts]
kuda = "tools.main:main"
