# ---------------------------------------------
# pyproject.toml - Project Metadata & Configuration
#
# Defines project metadata, dependencies, and packaging configurations
# for the KDM Tools project.
#
# Author: Hussain Shareef (@kudadonbe)
# Date: 2025-03-26
# ---------------------------------------------

[project]
name = "tools"
version = "0.1.0"
description = "A multipurpose PDF and image utility tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Hussain Shareef", email = "hussain.shareef@gmail.com" }
]

dependencies = [
  "firebase-admin",
  "python-dotenv",
  "pdf2image",
  "pillow",
  "pytesseract",
  "ocrmypdf",
  "pikepdf",
  "questionary",
  "click",
  "tqdm",
  "numpy",
  "pypdf"
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
  "pytest",
  "black",
  "ruff"
]

[project.scripts]
kdm = "tools.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
